(executable
 (name main)
 (public_name mirage-ci-solver)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries
  lwt
  lwt.unix
  solver_api
  opam-file-format
  opam-format
  opam-state
  opam-core
  fpath
  fmt
  result
  digestif
  git
  ppx_deriving_yojson.runtime
  opam-0install
  capnp-rpc-unix
  capnp-rpc-lwt
  logs
  astring
  capnp-rpc
  capnp-rpc-net
  mirage-flow
  git-unix))
